--- a/.github/workflows/create-issue.yml
+++ b/.github/workflows/create-issue.yml
@@ -29,22 +29,42 @@ jobs:
               throw new Error('Missing required fields in payload');
             }
             
-            const issueTitle = `New Tattoo Inquiry from ${name}`;
+            // Sanitize inputs to prevent injection
+            const sanitize = (str) => String(str || '').replace(/[<>]/g, '').trim();
+            const sanitizedName = sanitize(name);
+            const sanitizedEmail = sanitize(email);
+            const sanitizedMessage = sanitize(message);
+            
+            // Validate lengths
+            if (sanitizedName.length === 0 || sanitizedName.length > 100) {
+              throw new Error('Invalid name length');
+            }
+            if (sanitizedEmail.length === 0 || sanitizedEmail.length > 255) {
+              throw new Error('Invalid email length');
+            }
+            if (sanitizedMessage.length < 10 || sanitizedMessage.length > 5000) {
+              throw new Error('Invalid message length');
+            }
+            
+            const issueTitle = `New Tattoo Inquiry from ${sanitizedName}`;
+            // Limit title to GitHub's 255 char limit
+            const truncatedTitle = issueTitle.length > 255 ? issueTitle.substring(0, 252) + '...' : issueTitle;
+            
             const issueBody = `## Contact Information
-**Name:** ${name}
-**Email:** ${email}
+**Name:** ${sanitizedName}
+**Email:** ${sanitizedEmail}
 
 ## Tattoo Idea
-${message}
+${sanitizedMessage}
 
 ---
-*Submitted via website contact form*`;
+*Submitted via website contact form on ${new Date().toISOString()}*`;
 
             try {
               const { data } = await github.rest.issues.create({
                 owner: context.repo.owner,
                 repo: context.repo.repo,
-                title: issueTitle,
+                title: truncatedTitle,
                 body: issueBody,
                 labels: ['inquiry', 'contact-form'] // Will fail silently if labels don't exist
               });
@@ -57,7 +77,7 @@ ${message}
                 const { data } = await github.rest.issues.create({
                   owner: context.repo.owner,
                   repo: context.repo.repo,
-                  title: issueTitle,
+                  title: truncatedTitle,
                   body: issueBody
                 });
                 console.log(`✅ Created issue #${data.number} (without labels): ${data.html_url}`);
